--- a/tuote.html
+++ b/tuote.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Tuotteet</h1>
         <a href="index.html">
-            <img src="Perunasäkki.jpeg"></a>
+            <img src="perunasäkki.jpeg"></a>
         <h1><b>Perunasäkki</b></h1>
         <p>Hyviä suomalaisia perunoita halvalla!</p>
         <p>20kg 5€ </p>
