--- a/tuote.html
+++ b/tuote.html
@@ -10,10 +10,10 @@
         <h1>Tuotteet</h1>
         <a href="index.html">
             <img src="perunasäkki.jpeg"></a>
-        <h1><b>Perunasäkki</b></h1>
+        <h1><b>perunasäkki</b></h1>
         <p>Hyviä suomalaisia perunoita halvalla!</p>
         <p>20kg 5€ </p>
-        <p><a href="Index.html"><b>Takaisin etusivulle</b></a></p>
+        <p><a href="index.html"><b>Takaisin etusivulle</b></a></p>
     </body>
     
 
